[tool.poetry]
name = "metrics-cleaner"
version = "0.1.0"
description = ""
authors = ["westwardharbor0 <westwardharbor0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
